# detectDesign

example_notebooks/: SpCas9_V2.fa  detect-design.ipy  flake.nix  jupyter.sh  pyproject.toml  test_detectDesign_spCas9_input.csv
example_notebooks/results/02132020_test1_targets/aux/: pIP_spCas9_v2_3508_7611.csv
