[tool.poetry]
name = 'detectDesign'
version = '0.1.0'
description = 'detectDesign'
authors = ['Ben Booth <bwbooth@lbl.gov>']

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
matplotlib = "==3.0.3"
numpy = "==1.17.3"
pandas = "==1.0.1"
seaborn = "==0.8.1"
regex = "==2018.8.29"
scipy = "^1.6.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

